--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,14 @@
 
 @tailwind utilities;
 
+.kokot{
+  height: 3000px;
+}
+
+.react-date-picker__wrapper{
+  border: thin solid red;
+}
+
 .loader {
   border: 5px solid #f3f3f3;
   border-radius: 50%;
