--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 }
 
 .react-date-picker__wrapper{
-  border: thin solid white;
+  border: thin none rgba(255, 255, 255, 0) !important;
 }
 
 .loader {
